--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,42 +1,39 @@
-name: Build-sphinx-docs
+name: documentation
 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build-docs:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.11
+      - name: "Set up Python"
         uses: actions/setup-python@v2
         with:
-          python-version: "3.11"
+          python-version: 3.11
 
-      - name: Install dependencies
+      - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme ghp-import
-      - name: Build HTML
+          python -m pip install --upgrade poetry
+          poetry install
+
+      - name: "Build documentation"
+        run: poetry run sphinx-build docs static
+
+      # we need nojekyll or github will ignore folders starting with "_"
+      - name: "Copy static files"
         run: |
-          cd docs/
-          make html
-      - name: Run ghp-import
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          ghp-import -n -p -f docs/_build/html
+
+          mv .nojekyll static
+
+
+      - name: "Deploy Docs 🚀"
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: static # The folder the action should deploy.
