--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,39 +1,27 @@
 name: documentation
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
+
+permissions:
+  contents: write
 
 jobs:
-
-  build-docs:
+  docs:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: "Set up Python"
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11
-
-      - name: "Install dependencies"
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry
-          poetry install
-
-      - name: "Build documentation"
-        run: poetry run sphinx-build docs static
-
-      # we need nojekyll or github will ignore folders starting with "_"
-      - name: "Copy static files"
+          pip install sphinx sphinx_rtd_theme myst_parser
+      - name: Sphinx build
         run: |
-
-          mv .nojekyll static
-
-
-      - name: "Deploy Docs 🚀"
-        uses: JamesIves/github-pages-deploy-action@4.1.1
+          sphinx-build doc _build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: static # The folder the action should deploy.
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
