--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.11
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser sphinx-copybutton
+          pip install sphinx sphinx_rtd_theme myst_parser sphinx-copybutton numpydoc
           pip install -r requirements.txt
       - name: Sphinx build
         run: |
