--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering",
@@ -43,6 +44,8 @@ test = [
     "empulse",
     "pytest>=7.4.4",
     "pytest-cov>=4.1.0",
+    "tox>=4.13.0",
+    "pandas>=2.2.0",
 ]
 
 docs = [
