--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,3 +2,8 @@ pytest==7.4.4
 pytest-cov==4.1.0
 tox==4.13.0
 pandas==2.2.1
+twine==5.0.0
+sphinx==7.3.6
+sphinx-rtd-theme==2.0.0
+sphinx-copybutton==0.5.2
+numpydoc==1.7.0
