--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numba>=0.57.0
 numpy>=1.24.2
-scikit-learn>=1.4.0
+scikit-learn==1.6.0
 scipy>=1.10.1
-xgboost>=1.7.4
+xgboost>=2.1.3
 joblib>=1.3.2
