--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numba>=0.57.0
-numpy>=1.24.2
+numba==0.59.0
+numpy==1.26.4
 scikit-learn==1.6.0
-scipy>=1.10.1
-xgboost>=2.1.3
-joblib>=1.3.2
+scipy==1.12.0
+xgboost==2.1.3
+joblib==1.3.2
