--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "numba>=0.57.0",
     "numpy>=1.24.2",
     "scikit-learn>=1.6.0",
+    "imbalanced-learn>=0.13.0",
     "scipy>=1.10.1",
     "xgboost>=1.7.4",
     "joblib>=1.3.2",
