--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "empulse"
 version = "0.4.2"
-description = "Value-driven metrics and models for scikit-learn"
+description = "Value-driven and cost-sensitive tools for scikit-learn"
 readme = "README.md"
 authors = [
     { name = "Shimanto Rahman", email = "shimanto.rahman@ugent.be" },
