--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 ]
 requires-python = ">= 3.10"
 dependencies = [
-    "numba>=0.57.0",
+    "numba>=0.61.0rc2",
     "numpy>=1.24.2",
     "scikit-learn>=1.6.0",
     "imbalanced-learn>=0.13.0",
