--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.0
-envlist = py310, py311, py312
+envlist = py310, py311, py312, py313
 isolated_build = true
 
 [gh-actions]
@@ -8,6 +8,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [testenv]
 setenv =
