--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering",
@@ -32,7 +33,7 @@ classifiers = [
 requires-python = ">= 3.10"
 dependencies = [
     "numba>=0.61.0rc2",
-    "numpy>=1.24.2",
+    "numpy>=1.24.4",
     "scikit-learn>=1.6.0",
     "imbalanced-learn>=0.13.0",
     "scipy>=1.10.1",
