--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "scipy>=1.10.1",
     "xgboost>=1.7.4",
     "joblib>=1.3.2",
+    "pandas>=2.2.0",
 ]
 
 [project.urls]
@@ -52,12 +53,11 @@ test = [
     "pytest>=7.4.4",
     "pytest-cov>=4.1.0",
     "tox>=4.13.0",
-    "pandas>=2.2.0",
 ]
 
 docs = [
     "sphinx>=7.2.6",
-    "sphinx_rtd_theme>=2.0.0",
+    "pydata-sphinx-theme>=0.16.1",
     "sphinx-copybutton>=0.5.2",
     "myst-parser>=4.0.0",
     "numpydoc>=1.6.0",
