--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "empulse"
+dynamic = ["version"]
 description = "Value-driven and cost-sensitive tools for scikit-learn"
 readme = "README.md"
 authors = [
