--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ docs = [
     "sphinx>=7.2.6",
     "pydata-sphinx-theme>=0.16.1",
     "sphinx-copybutton>=0.5.2",
+    "sphinxcontrib-sass>=0.3.4",
     "myst-parser>=4.0.0",
     "numpydoc>=1.6.0",
 ]
