Exclude slow tests from ci

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,3 +79,8 @@ exclude = [
     "tests",
     "notebooks",
 ]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
