--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} {posargs}
