--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,6 @@ dependencies = [
     "scikit-learn>=1.6.0",
     "imbalanced-learn>=0.13.0",
     "scipy>=1.10.1",
-    "xgboost>=1.7.4",
     "joblib>=1.3.2",
     "pandas>=2.2.0",
 ]
@@ -51,8 +50,14 @@ repository = "https://github.com/ShimantoRahman/empulse"
 issue-tracker = "https://github.com/ShimantoRahman/empulse/issues"
 
 [project.optional-dependencies]
-test = [
+optional = [
     "empulse",
+    "xgboost>=1.7.4",
+    "lightgbm>=4.5.0",
+]
+
+test = [
+    "empulse[optional]",
     "pytest>=7.4.4",
     "pytest-cov>=4.1.0",
     "tox>=4.13.0",
