--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,8 @@ docs = [
 
 dev = [
     "empulse[test,docs]",
-    "twine>=4.0.2"
+    "twine>=4.0.2",
+    "ruff>=0.9.2",
 ]
 
 [tool.setuptools.packages.find]
@@ -89,3 +90,9 @@ exclude = [
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.format]
+quote-style = "single"
