Add optional dependencies to tox

--- a/tox.ini
+++ b/tox.ini
@@ -15,5 +15,6 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
+extras = optional
 commands =
     pytest --basetemp={envtmpdir} {posargs}
