--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,6 +2,7 @@ pytest==8.3.4
 pytest-cov==4.1.0
 tox==4.13.0
 twine==5.0.0
+ruff==0.9.2
 sphinx==7.3.6
 sphinx-rtd-theme==2.0.0
 sphinx-copybutton==0.5.2
