Add ruff linting options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,5 +94,11 @@ markers = [
 [tool.ruff]
 line-length = 120
 
+[tool.ruff.lint]
+extend-select = ["I", "T201"]
+ignore = [
+    "E731",  # do not assign a `lambda` expression, use a `def`
+]
+
 [tool.ruff.format]
 quote-style = "single"
