--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "setuptools-scm[toml]"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -42,7 +42,7 @@ dependencies = [
 ]
 
 [tool.setuptools.dynamic]
-version = { file = "empulse/VERSION.txt" }
+version = {attr = "empulse.__init__.__version__"}
 
 [project.urls]
 documentation = "https://empulse.readthedocs.io/en/stable/"
