--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "scipy>=1.10.1",
     "joblib>=1.3.2",
     "pandas>=2.2.0",
+    "sympy>=1.12.1",
 ]
 
 [tool.setuptools.dynamic]
@@ -54,7 +55,7 @@ optional = [
     "empulse",
     "xgboost>=1.7.4",
     "lightgbm>=4.5.0",
-    "catboost>=1.2.7",
+    "catboost>=1.2.7; python_version < '3.13'",
 ]
 
 test = [
