--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.9.2
     hooks:
       # Run the linter.
@@ -10,7 +9,7 @@ repos:
       - id: ruff-format
         args: [ empulse, tests ]
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0  # Use the ref you want to point at
+    rev: v5.0.0
     hooks:
       - id: check-yaml
       - id: check-toml
