--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,11 +74,14 @@ docs = [
     "numpydoc>=1.6.0",
 ]
 
-dev = [
-    "empulse[test,docs]",
-    "twine>=4.0.2",
+lint = [
     "ruff>=0.9.2",
     "pre-commit>=4.0.1",
+]
+
+dev = [
+    "empulse[test,docs,lint]",
+    "twine>=4.0.2",
 ]
 
 [tool.setuptools.packages.find]
