--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,25 @@
 [tox]
 minversion = 3.8.0
-envlist = py310, py311, py312, py313
+envlist = py3{10,11,12,13}-{tests,docs,lint}
 isolated_build = true
 
 [gh-actions]
 python =
-    3.10: py310
-    3.11: py311
-    3.12: py312
-    3.13: py313
+    3.10: py310-{tests, docs, lint}
+    3.11: py311-{tests, docs, lint}
+    3.12: py312-{tests, docs, lint}
+    3.13: py313-{tests, docs, lint}
 
 [testenv]
 package = wheel
 wheel_build_env = .pkg
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
-extras = optional
+extras =
+    tests: optional, test
+    docs: optional, docs
+    lint: optional, lint
 commands =
-    pytest --basetemp={envtmpdir} {posargs}
+    tests: pytest --basetemp={envtmpdir} {posargs}
+    docs: sphinx-build -b html --write-all --keep-going docs/ docs/build
+    lint: pre-commit run --show-diff-on-failure --all-files
