--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,5 @@ extras =
     lint: optional, lint
 commands =
     tests: pytest --basetemp={envtmpdir} {posargs}
-    docs: sphinx-build -b html --write-all --keep-going docs/ docs/build
+    docs: sphinx-build -b html --write-all --fail-on-warning --keep-going docs/ docs/_build
     lint: pre-commit run --show-diff-on-failure --all-files
