--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,14 @@ dependencies = [
     "sympy>=1.12.1",
 ]
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+mypkg = ["*.csv.gz", "*.rst"]
+
 [tool.setuptools.dynamic]
-version = {attr = "empulse.__version__"}
+version = { attr = "empulse.__version__" }
 
 [project.urls]
 documentation = "https://empulse.readthedocs.io/en/stable/"
@@ -102,26 +108,26 @@ line-length = 120
 exclude = ["docs", "notebooks"]
 
 [tool.ruff.lint]
-extend-select = [  # find all rules at https://docs.astral.sh/ruff/rules
-    "A",  # flake8-builtins
-    "ANN",  # flake8-annotations
-    "B",  # flake8-bugbear
-    "BLE",  # flake8-blind-except
-    "C4",  # flake8-comprehensions
-    "D",  # pydocstyle
-    "E",  # pycodestyle
-    "F",  # pyflakes
-    "I",  # isort
-    "ISC",  # flake8-implicit-str-concat
-    "ICN",  # flake8-import-conventions
-    "INP",  # flake8-no-pep420
-    "N",  # pep8-naming
-    "NPY",  # numpy-specific rules
-    "PD",  # pandas-vet
-    "PGH004",  # blanket-noqa
-    "PIE",  # flake8-pie
-    "PLC",  # pylint conventions
-    "PLE",  # pylint errors
+extend-select = [# find all rules at https://docs.astral.sh/ruff/rules
+    "A", # flake8-builtins
+    "ANN", # flake8-annotations
+    "B", # flake8-bugbear
+    "BLE", # flake8-blind-except
+    "C4", # flake8-comprehensions
+    "D", # pydocstyle
+    "E", # pycodestyle
+    "F", # pyflakes
+    "I", # isort
+    "ISC", # flake8-implicit-str-concat
+    "ICN", # flake8-import-conventions
+    "INP", # flake8-no-pep420
+    "N", # pep8-naming
+    "NPY", # numpy-specific rules
+    "PD", # pandas-vet
+    "PGH004", # blanket-noqa
+    "PIE", # flake8-pie
+    "PLC", # pylint conventions
+    "PLE", # pylint errors
     # pylint refactor
     "PLR1714",
     "PLR1716",
@@ -131,24 +137,24 @@ extend-select = [  # find all rules at https://docs.astral.sh/ruff/rules
     "PLR2044",
     "PLR5501",
     "PLR6201",
-    "PLW",  # pylint warnings
-    "RSE",  # flake8-raise
-    "RUF",  # ruff-specific rules
-    "SIM",  # flake8-simplify
-    "UP",  # pyupgrade
-    "T20",  # flake8-print
-    "TC",  # flake8-type-checking
+    "PLW", # pylint warnings
+    "RSE", # flake8-raise
+    "RUF", # ruff-specific rules
+    "SIM", # flake8-simplify
+    "UP", # pyupgrade
+    "T20", # flake8-print
+    "TC", # flake8-type-checking
 ]
 ignore = [
-    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
-    "E731",  # do not assign a `lambda` expression, use a `def`
-    "D100",  # Missing docstring in public module
-    "D104",  # Missing docstring in public package
-    "D105",  # Missing docstring in magic method
-    "D301",  # Use r""" if any backslashes in a docstring
-    "PLW2901",  # `for` loop variable overwritten by assignment target
-    "PLC2701",  # Private name import {name} from external module {module}
-    "PLC0415",  # `import` should be at the top-level of a file
+    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
+    "E731", # do not assign a `lambda` expression, use a `def`
+    "D100", # Missing docstring in public module
+    "D104", # Missing docstring in public package
+    "D105", # Missing docstring in magic method
+    "D301", # Use r""" if any backslashes in a docstring
+    "PLW2901", # `for` loop variable overwritten by assignment target
+    "PLC2701", # Private name import {name} from external module {module}
+    "PLC0415", # `import` should be at the top-level of a file
 ]
 allowed-confusables = ["–"]  # allow en-dash in docstrings (used in APA citation)
 
@@ -162,13 +168,13 @@ convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = [
-    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
-    "E731",  # do not assign a `lambda` expression, use a `def`
-    "D",  # pydocstyle
-    "NPY002",  # Replace legacy `np.random.random` call with `np.random.Generator`
-    "PLW2901",  # `for` loop variable overwritten by assignment target
-    "PLC2701",  # Private name import {name} from external module {module}
-    "PLC0415",  # `import` should be at the top-level of a file
+    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in {name}
+    "E731", # do not assign a `lambda` expression, use a `def`
+    "D", # pydocstyle
+    "NPY002", # Replace legacy `np.random.random` call with `np.random.Generator`
+    "PLW2901", # `for` loop variable overwritten by assignment target
+    "PLC2701", # Private name import {name} from external module {module}
+    "PLC0415", # `import` should be at the top-level of a file
 ]
 
 [tool.ruff.lint.flake8-annotations]
