--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,27 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     PYTHONPATH = {toxinidir}
-extras =
-    tests: optional, test
-    docs: optional, docs
-    lint: optional, lint
+
+[testenv:py3{10,11,12,13}-lint]
+description = run code formatter and linter (auto-fix)
+skip_install = true
+deps =
+    pre-commit-uv>=4.1.1
 commands =
-    tests: pytest --basetemp={envtmpdir} {posargs}
-    docs: sphinx-build -b html --write-all --fail-on-warning --keep-going docs/ docs/_build
-    lint: pre-commit run --show-diff-on-failure --all-files
+    pre-commit run --all-files --show-diff-on-failure
+
+[testenv:py3{10,11,12,13}-docs]
+runner = uv-venv-lock-runner
+description = build documentation with sphinx
+dependency_groups =
+    docs
+commands =
+    sphinx-build -b html --write-all --fail-on-warning --keep-going docs/ docs/_build
+
+[testenv:py3{10,11,12,13}-tests]
+runner = uv-venv-lock-runner
+description = run tests with pytest
+dependency_groups =
+    test
+commands =
+    pytest --basetemp={envtmpdir} {posargs}
