--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ exclude = ["docs", "notebooks"]
 quote-style = "single"
 docstring-code-format = true
 docstring-code-line-length = 90
+preview = true
 
 [tool.ruff.lint]
 extend-select = [# find all rules at https://docs.astral.sh/ruff/rules
