--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,9 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
 
+[tool.coverage.run]
+omit = ["empulse/utils/_sklearn_compat.py"]
+
 [tool.ruff]
 line-length = 120
 exclude = ["docs", "notebooks"]
