--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ default-groups = ["dev"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-mypkg = ["*.csv.gz", "*.rst"]
+empulse = ["datasets/data/*.csv.gz", "datasets/descriptions/*.rst"]
 
 [tool.setuptools.dynamic]
 version = { attr = "empulse.__version__" }
