--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
 documentation = "https://empulse.readthedocs.io/en/stable/"
 repository = "https://github.com/ShimantoRahman/empulse"
 issue-tracker = "https://github.com/ShimantoRahman/empulse/issues"
+changelog = "https://empulse.readthedocs.io/en/stable/project/changelog.html"
 
 [project.optional-dependencies]
 optional = [
