--- a/pyproject.toml
+++ b/pyproject.toml
@@ -204,4 +204,5 @@ allow-dunder-method-names = ["__sklearn_tags__", "_repr_latex_"]
 
 [tool.mypy]
 ignore_missing_imports = true
-follow_imports = "skip"  # do not follow imports for not (gradually type-check the codebase)
+follow_imports = "silent"  # do not follow imports for not (gradually type-check the codebase)
+allow_redefinition = true  # sometimes mypy cannot infer the type correctly, especially when using np.typing.ArrayLike
