--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "joblib>=1.3.2",
     "pandas>=2.2.0",
     "sympy>=1.12.1",
+    "typing-extensions>=4.0.0",
 ]
 
 [project.urls]
