feat: add catboost for python 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ optional = [
     "xgboost>=1.7.4",
     "lightgbm>=4.5.0",
     "catboost>=1.2.7; python_version < '3.13'",
+    "catboost>=1.2.8; python_version >= '3.13'",
 ]
 
 [dependency-groups]
