--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools", "wheel", "Cython", "numpy"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -99,7 +99,7 @@ default-groups = ["dev"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-empulse = ["datasets/data/*.csv.gz", "datasets/descriptions/*.rst", "py.typed"]
+empulse = ["datasets/data/*.csv.gz", "datasets/descriptions/*.rst", "metrics/_loss/*.pyx", "py.typed"]
 
 [tool.setuptools.dynamic]
 version = { attr = "empulse.__version__" }
