--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release
+name: Build and upload to PyPI
 
 on:
   push:
@@ -66,53 +66,79 @@ jobs:
             echo "The new version $NEW_VERSION is greater than the latest version $LATEST_VERSION on PyPI."
           fi
 
-  setup_and_build:
-    needs: [ details, check_pypi ]
+  build_wheels:
+    name: Build wheels for ${{ matrix.os }}
+    needs: check_pypi
+    runs-on: ${{ matrix.runs-on }}
+    strategy:
+      matrix:
+        include:
+          - os: linux-intel
+            runs-on: ubuntu-latest
+          - os: linux-arm
+            runs-on: ubuntu-24.04-arm
+          - os: windows-intel
+            runs-on: windows-latest
+          - os: windows-arm
+            runs-on: windows-11-arm
+          - os: macos-intel
+            runs-on: macos-13
+          - os: macos-arm
+            runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v3.1.4
+        env:
+          CIBW_PLATFORM: ${{ matrix.platform || 'auto' }}
+          CIBW_ARCHS: ${{ matrix.archs || 'auto' }}
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./wheelhouse/*.whl
+
+  build_sdist:
+    name: Build source distribution
+    needs: check_pypi
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel
+      - name: Build sdist
+        run: uv build --sdist
 
-      - name: Build source and wheel distribution
-        run: |
-          python setup.py sdist bdist_wheel
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: cibw-sdist
+          path: dist/*.tar.gz
 
-  pypi_publish:
-    name: Upload release to PyPI
-    needs: [ setup_and_build, details ]
+  upload_pypi:
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    environment:
-      name: release
+    environment: pypi
     permissions:
       id-token: write
     steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v5
         with:
-          name: dist
-          path: dist/
+          pattern: cibw-*
+          path: dist
+          merge-multiple: true
 
-      - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: pypa/gh-action-pypi-publish@release/v1
 
   github_release:
     name: Create GitHub Release
-    needs: [ setup_and_build, details ]
+    needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -122,15 +148,22 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Extract and preprocess changelog
+        run: |
+          python docs/parse_changelog.py ${{ needs.details.outputs.new_version }} -i CHANGELOG.rst -o changelog.md
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
+          pattern: cibw-*
+          path: dist
+          merge-multiple: true
 
       - name: Create GitHub Release
         id: create_release
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create ${{ needs.details.outputs.tag_name }} dist/* --title ${{ needs.details.outputs.tag_name }} --generate-notes
+          gh release create ${{ needs.details.outputs.tag_name }} dist/* \
+            --title ${{ needs.details.outputs.tag_name }} \
+            --notes-file changelog.md
