--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ docs = [
     "sphinxcontrib-sass>=0.3.4",
     "myst-parser>=4.0.0",
     "numpydoc>=1.6.0",
+    "sphinx-codeautolink>=0.17.5",
 ]
 
 lint = [
