--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,13 +100,7 @@ default-groups = ["dev"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-empulse = [
-    "datasets/data/*.csv.gz",
-    "datasets/descriptions/*.rst",
-    "metrics/_loss/*.pyx",
-    "models/cost_sensitive/_impurity/*.pyx",
-    "py.typed"
-]
+empulse = ["**/*.pxd", "**/*.pyx", "**/*.csv.gz", "**/*.rst", "py.typed"]
 
 [tool.setuptools.dynamic]
 version = { attr = "empulse.__version__" }
