chore(tox): add build_ext command to tox test environment

--- a/tox.ini
+++ b/tox.ini
@@ -38,4 +38,5 @@ description = run tests with pytest
 dependency_groups =
     test
 commands =
+    python setup.py build_ext --inplace
     pytest --basetemp={envtmpdir} {posargs}
