--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,7 +126,8 @@ jobs:
   upload_pypi:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    environment: pypi
+    environment:
+      name: release
     permissions:
       id-token: write
     steps:
